# polars-deser-row

./: Cargo.toml  readme.md
examples/: primitive_values.rs
src/: _ser_root.rs  deser_map.rs  deser_root.rs  deser_seq.rs  deser_series.rs  lib.doc.md  lib.rs  main.rs  pl_row_error.rs  row_iter.rs  seq.rs  ser_root.rs  ser_seq.rs  series_deser.rs  series_deser_error.rs  series_deser_map.rs  series_deser_root.rs  series_deser_struct_.rs  series_serde_root.rs  tests.rs
src/test-assets/: test.csv
